Default tax bug fix, alignment mat select

--- a/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.scss
+++ b/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.scss
@@ -33,10 +33,6 @@
   }
 
   &--memo-preview-select {
-    ::ng-deep .mat-select-value {
-      width: 96.7%;
-    }
-
     ::ng-deep .mat-select-panel-wrap {
       @extend .mat-select-panel-wrap;
       // TODO: check this
